--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "object-settings",
   "description": "Object settings.",
-  "version": "0.0.6",
+  "version": "0.1.0",
   "main": "index",
   "author": {
     "name": "Usability Dynamics",
@@ -32,18 +32,23 @@
     "url": "https://github.com/UsabilityDynamics/node-object-settings/issues"
   },
   "dependencies": {
-    "abstract": ">=0.0.2",
-    "debug": "*"
+    "abstract": "~0.1.0",
+    "lodash": "~2.4.0",
+    "debug": "~0.7.4"
   },
   "devDependencies": {
-    "yuidocjs": "*",
+    "grunt-contrib-symlink": "~0.2.0",
+    "grunt-contrib-yuidoc": "~0.5.0",
+    "grunt-contrib-watch": "~0.5.3",
+    "grunt-contrib-less": "~0.8.1",
+    "grunt-contrib-concat": "~0.3.0",
+    "grunt-contrib-clean": "~0.5.0",
+    "grunt-jscoverage": "~0.0.3",
+    "grunt-markdown": "~0.4.0",
+    "grunt-mocha-cli": "~1.3.0",
+    "grunt-shell": "~0.5.0",
     "Faker": "*",
-    "Faker": "*",
-    "mocha": "*",
     "should": "*"
-  },
-  "scripts": {
-    "test": "make test"
   },
   "readmeFilename": "readme.md"
 }
