--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "email": "info@usabilitydynamics.com",
     "url": "http://usabilitydynamics.com"
   },
+  "license": "(MIT OR Apache-2.0)",
   "contributors": [
     {
       "name": "Andy Potanin",
@@ -46,25 +47,25 @@
     "eventemitter2": "~0.4.13"
   },
   "devDependencies": {
-    "grunt-contrib-symlink": "~0.2.0",
-    "grunt-contrib-yuidoc": "~0.5.0",
-    "grunt-contrib-watch": "~0.5.3",
-    "grunt-contrib-less": "~0.8.1",
-    "grunt-contrib-concat": "~0.3.0",
+    "cover-child-process": "~0.1.5",
+    "faker": "~1.0.0",
     "grunt-contrib-clean": "~0.5.0",
+    "grunt-contrib-concat": "~0.3.0",
+    "grunt-contrib-less": "~0.8.1",
+    "grunt-contrib-symlink": "~0.2.0",
+    "grunt-contrib-watch": "~0.5.3",
+    "grunt-contrib-yuidoc": "~0.5.0",
+    "grunt-coveralls": "~0.3.0",
+    "grunt-env": "~0.4.1",
     "grunt-jscoverage": "~0.0.3",
     "grunt-markdown": "~0.4.0",
     "grunt-mocha-cli": "~1.3.0",
-    "grunt-shell": "~0.5.0",
-    "faker": "~1.0.0",
-    "should": "~4.0.4",
-    "travis-cov": "~0.2.5",
-    "grunt-env": "~0.4.1",
-    "cover-child-process": "~0.1.5",
-    "load-grunt-tasks": "~0.6.0",
     "grunt-mocha-test": "~0.11.0",
     "grunt-notify": "~0.3.0",
-    "grunt-coveralls": "~0.3.0"
+    "grunt-shell": "~0.5.0",
+    "load-grunt-tasks": "~0.6.0",
+    "should": "^4.0.4",
+    "travis-cov": "~0.2.5"
   },
   "readmeFilename": "readme.md"
 }
